<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrowseActivity">

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/browse_list_view"
        android:layout_below="@+id/top_bar"
        android:divider="@null"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/top_bar"
        android:id="@+id/category_select_scroll_view"
        android:visibility="gone">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:background="@color/da_dark_green">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/eight_hrs"
                    style="@style/TextOnlyButton"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/newest"
                    style="@style/TextOnlyButton"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/whats_hot"
                    style="@style/TextOnlyButton"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/twenty_four_hrs"
                    style="@style/TextOnlyButton"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:background="@color/da_dark_green">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/three_days"
                    style="@style/TextOnlyButton"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/one_week"
                    style="@style/TextOnlyButton"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/one_month"
                    style="@style/TextOnlyButton"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/all_time"
                    style="@style/TextOnlyButton"/>

            </LinearLayout>

            <!--
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Digital Art"
                style="@style/TextOnlyListItemButton"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp">
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="3-Dimensional Art"
                    style="@style/TextOnlyListItemButton"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Animation"
                    style="@style/TextOnlyListItemButton"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Drawings &amp; Paintings"
                    style="@style/TextOnlyListItemButton"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Fractal Art"
                    style="@style/TextOnlyListItemButton"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Mixed Media"
                    style="@style/TextOnlyListItemButton"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Photomanipulation"
                    style="@style/TextOnlyListItemButton"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Pixel Art"
                    style="@style/TextOnlyListItemButton"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Stereoscopy"
                    style="@style/TextOnlyListItemButton"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Text Art"
                    style="@style/TextOnlyListItemButton"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Typography"
                    style="@style/TextOnlyListItemButton"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Vector"
                    style="@style/TextOnlyListItemButton"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Vexel"
                    style="@style/TextOnlyListItemButton"/>
            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Traditional Art"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Photography"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Artisan Crafts"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Literature"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Film &amp; Animation"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Motion Books New"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Flash"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Designs &amp; Interfaces"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Customization"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Cartoons &amp; Comics"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Manga &amp; Anime"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Anthro"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Fan Art"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Resources &amp; Stock Images"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Community Projects"
                style="@style/TextOnlyListItemButton"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Contests"
                style="@style/TextOnlyListItemButton"/>

                -->

        </LinearLayout>

    </ScrollView>
    <!--
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar"
        android:visibility="visible">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight_hrs"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whats_hot"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newest"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_four_hrs"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_days"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_week"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_month"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_time"/>

        </RadioGroup>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/category_select_list_view"
            android:layout_centerHorizontal="true"
            android:divider="@null"/>

    </LinearLayout>
    -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar_height"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_bar_background"
        android:id="@+id/top_bar"/>

    <ImageView
        android:layout_width="@dimen/top_bar_button_size"
        android:layout_height="@dimen/top_bar_button_size"
        android:id="@+id/deviant_art_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/top_bar_padding"
        android:src="@drawable/deviant_art_logo_transparent"
        android:scaleType="fitEnd"/>

    <Button
        android:layout_width="@dimen/top_bar_button_size"
        android:layout_height="@dimen/top_bar_button_size"
        android:layout_margin="@dimen/top_bar_padding"
        android:id="@+id/menu_button"
        android:layout_alignParentLeft="true"
        android:background="@drawable/menu_icon"/>

    <Button
        android:layout_width="@dimen/top_bar_dropdown_width"
        android:layout_height="@dimen/top_bar_button_size"
        android:layout_centerHorizontal="true"
        android:layout_toLeftOf="@id/deviant_art_logo"
        android:layout_toRightOf="@id/menu_button"
        android:layout_margin="@dimen/top_bar_padding"
        android:text="POPULAR"
        android:id="@+id/category_button"
        android:onClick="categoryButtonOnClick"
        style="@style/TopBarDropdownStyle"/>

    <!--<View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/da_green_shadow"
        android:id="@+id/fullscreen_image_view_background"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fullscreen_view"
        android:visibility="invisible">
        <com.grant.amos.util.ScalableImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/fullscreen_image_view"
            android:layout_centerInParent="true"/>
    </LinearLayout>-->

</RelativeLayout>